--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "postcss": "^8.2.10",
     "tailwindcss": "^2.1.1"
   },
+  "dependencies": {
+    "ethers": "^5.6.9"
+  },
   "scripts": {
     "start": "npx nullstack start",
     "build": "npx nullstack build --mode=ssr",
