--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "tailwindcss": "^2.1.1"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "ethers": "^5.6.9"
   },
   "scripts": {
