--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "ethers": "^5.6.9"
   },
   "scripts": {
